fix contrast errors on social icons

--- a/source/_patterns/02-organisms/headers/wwu-header/_wwu-header.scss
+++ b/source/_patterns/02-organisms/headers/wwu-header/_wwu-header.scss
@@ -57,8 +57,8 @@ $site-name-gradient-end: transparentize($dark-blue, 0.2);
     }
 
     .western-logo {
-      background-color: $dark-blue;
       color: $white;
+      background-color: $dark-blue;
 
       grid-area: logo;
       -ms-grid-column: 1;
@@ -75,6 +75,7 @@ $site-name-gradient-end: transparentize($dark-blue, 0.2);
         margin: inherit;
         padding: 0;
         padding-right: $toggle-size--larger;
+        color: $white;
         border: none;
 
         &:hover,
